--- a/app/src/main/res/layout/fragment_city_weather.xml
+++ b/app/src/main/res/layout/fragment_city_weather.xml
@@ -16,7 +16,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:context=".fragments.CityWeatherFragment">
 
@@ -351,8 +351,8 @@
                 android:layout_height="32dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
-                android:focusable="true"
                 android:background="?attr/selectableItemBackground"
+                android:focusable="true"
                 android:src="@drawable/back_arrow"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -383,12 +383,26 @@
                 android:layout_width="128dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:background="?attr/selectableItemBackground"
                 android:text="@string/add"
                 android:textSize="16sp"
                 android:visibility="gone"
-                android:background="?attr/selectableItemBackground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="256dp"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/white"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cityName"
                 tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
