--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,15 @@
         android:id="@+id/cityWeatherFragment"
         android:name="com.weatherapp.fragments.CityWeatherFragment"
         android:label="cityWeatherFragment"
-        tools:layout="@layout/fragment_city_weather" />
+        tools:layout="@layout/fragment_city_weather">
+        <argument
+            android:name="city"
+            app:argType="string" />
+        <argument
+            android:name="weatherForCity"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
 
     <fragment
         android:id="@+id/listOfCitiesFragment"
@@ -19,28 +27,42 @@
 
         <action
             android:id="@+id/action_listOfCitiesFragment_to_searchCitiesFragment"
-            app:destination="@id/searchCitiesFragment" />
+            app:destination="@id/searchNavigation" />
         <action
             android:id="@+id/action_listOfCitiesFragment_to_cityWeatherFragment"
             app:destination="@id/cityWeatherFragment" />
     </fragment>
 
-    <fragment
-        android:id="@+id/searchCitiesFragment"
-        android:name="com.weatherapp.fragments.SearchCitiesFragment"
-        android:label="searchOfCitiesFragment"
-        tools:layout="@layout/fragment_search_cities">
-        <action
-            android:id="@+id/action_searchCitiesFragment_to_cityWeatherBottomSheetFragment"
-            app:destination="@id/cityWeatherBottomSheetFragment" />
-    </fragment>
+    <navigation
+        android:id="@+id/searchNavigation"
+        android:label="searchStack"
+        app:startDestination="@id/searchCitiesFragment">
+        <dialog
+            android:id="@+id/cityWeatherBottomSheetFragment"
+            android:name="com.weatherapp.fragments.CityWeatherBottomSheetFragment"
+            android:label="CityWeatherBottomSheetFragment">
+            <deepLink app:uri="https://android.weatherapp.com/weather/{cityName}?{cityId}?{timezone}" />
+            <argument
+                android:name="cityName"
+                app:argType="string" />
+            <argument
+                android:name="cityId"
+                app:argType="string" />
+            <argument
+                android:name="timezone"
+                app:argType="string" />
 
-    <dialog
-        android:id="@+id/cityWeatherBottomSheetFragment"
-        android:name="com.weatherapp.fragments.CityWeatherBottomSheetFragment"
-        android:label="CityWeatherBottomSheetFragment">
-
-    </dialog>
+        </dialog>
+        <fragment
+            android:id="@+id/searchCitiesFragment"
+            android:name="com.weatherapp.fragments.SearchCitiesFragment"
+            android:label="searchOfCitiesFragment"
+            tools:layout="@layout/fragment_search_cities">
+            <action
+                android:id="@+id/action_searchCitiesFragment_to_cityWeatherBottomSheetFragment"
+                app:destination="@id/cityWeatherBottomSheetFragment" />
+        </fragment>
+    </navigation>
 
 
 </navigation>
